--- a/src/main/frontend/package.json
+++ b/src/main/frontend/package.json
@@ -5,16 +5,16 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "test": "vue-cli-service test",
-    "e2e": "vue-cli-service e2e",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "test:unit": "vue-cli-service test:unit",
+    "test:e2e": "vue-cli-service test:e2e"
   },
   "dependencies": {
     "bootstrap": "^4.1.0",
     "jquery": "^3.3.1",
     "popper.js": "^1.14.3",
     "register-service-worker": "^1.0.0",
-    "vue": "^2.5.13",
+    "vue": "^2.5.16",
     "vue-class-component": "^6.0.0",
     "vue-property-decorator": "^6.0.0",
     "vue-router": "^3.0.1",
@@ -22,19 +22,19 @@
   },
   "devDependencies": {
     "@types/jest": "^22.0.1",
-    "@vue/cli-plugin-babel": "^3.0.0-beta.9",
-    "@vue/cli-plugin-e2e-nightwatch": "^3.0.0-beta.9",
-    "@vue/cli-plugin-pwa": "^3.0.0-beta.9",
-    "@vue/cli-plugin-typescript": "^3.0.0-beta.9",
-    "@vue/cli-plugin-unit-jest": "^3.0.0-beta.9",
-    "@vue/cli-service": "^3.0.0-beta.9",
-    "@vue/test-utils": "^1.0.0-beta.10",
-    "babel-core": "^7.0.0-0",
+    "@vue/cli-plugin-babel": "^3.0.0-rc.3",
+    "@vue/cli-plugin-e2e-nightwatch": "^3.0.0-rc.3",
+    "@vue/cli-plugin-pwa": "^3.0.0-rc.3",
+    "@vue/cli-plugin-typescript": "^3.0.0-rc.3",
+    "@vue/cli-plugin-unit-jest": "^3.0.0-rc.3",
+    "@vue/cli-service": "^3.0.0-rc.3",
+    "@vue/test-utils": "^1.0.0-beta.16",
+    "babel-core": "7.0.0-bridge.0",
     "lint-staged": "^6.0.0",
-    "node-sass": "^4.7.2",
-    "sass-loader": "^6.0.6",
-    "ts-jest": "^22.0.1",
-    "vue-template-compiler": "^2.5.13"
+    "node-sass": "^4.9.0",
+    "sass-loader": "^7.0.1",
+    "ts-jest": "^22.4.6",
+    "vue-template-compiler": "^2.5.16"
   },
   "browserslist": [
     "> 1%",
